[package]
name = "sshmap"
version = "1.2.0"
edition = "2024"
description = "Agentless SSH exposure management and access graph CLI"
license = "GPL-3.0-or-later"
authors = ["Cuma Kurt <cumakurt@gmail.com>"]
repository = "https://github.com/cumakurt/sshmap"
homepage = "https://github.com/cumakurt/sshmap"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ipnet = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "fs"] }
serde_yaml = "0.9"
clap_complete = "4"
russh = "0.61.2"
zip = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tower_governor = { version = "0.8", features = ["axum"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
